--- a/packages/docs/docs/features/2-sync-dataloader.mdx
+++ b/packages/docs/docs/features/2-sync-dataloader.mdx
@@ -22,7 +22,7 @@ if you are dealing with asynchronous data sources. In both cases, you need to in
 explicitly.
 
 When using the Sync Data Loader Feature, you need to provide a `dataLoader` property in your tree config
-which implements the [`SyncTreeDataLoader`](/api/core/interface/SyncTreeDataLoader) interface.
+which implements the [`TreeDataLoader`](/api/core/interface/TreeDataLoader) interface.
 
 ```ts
 const tree = useTree<ItemPayload>({
