--- a/packages/docs/docs/features/6-hotkeys.mdx
+++ b/packages/docs/docs/features/6-hotkeys.mdx
@@ -26,3 +26,5 @@ The feature also makes it very easy to add custom hotkeys with arbitrary keybind
 
 Look into the [Guide on Hotkeys](/guides/hotkeys) for details on how to use the Hotkeys Core Feature, and how to
 overwrite or add custom hotkeys.
+
+The [Accessibility Guide](/guides/accessibility#hotkeys) shows some demos of which hotkeys are available and how they can be used.
