--- a/packages/docs/docs/guides/1-hotkeys.mdx
+++ b/packages/docs/docs/guides/1-hotkeys.mdx
@@ -56,6 +56,8 @@ The following additional key names are supported:
 
 ## Available Hotkeys
 
+The [Accessibility Guide](/guides/accessibility#hotkeys) shows some demos of which hotkeys are available and how they can be used.
+
 ### General Hotkeys
 
 The following hotkeys need the `hotkeysCoreFeature` feature added.
