--- a/packages/docs/docs/dnd/4-behavior.mdx
+++ b/packages/docs/docs/dnd/4-behavior.mdx
@@ -6,4 +6,13 @@ category: draganddrop
 
 ## Reparenting
 
-## Dragging items on themselves
+For items dragged on the lower half of the bottom-most item of a tree, the specific
+target folder is chosen based on horizontal offset of the dragged item. This is called
+"Reparenting".
+
+
+![Drag and Drop Reparenting Demo](../../static/img/ht-dnd-reparenting.gif)
+
+
+<!-- ## Dragging items on themselves -->
+<!-- TODO document more special cases here -->
