--- a/packages/docs/docs/features/5-dnd.mdx
+++ b/packages/docs/docs/features/5-dnd.mdx
@@ -14,6 +14,7 @@ import {FeaturePageHeader} from "../../src/components/docs-page/feature-page-hea
     feature="drag-and-drop"
 />
 
+<!-- TODO show DND kitchensink as default sample -->
 <DemoBox tags={["feature/dnd"]} />
 
 The Drag-And-Drop Feature provides drag-and-drop capabilities. It allows to drag a single tree item (or many of the
