reference kdnd images

--- a/packages/docs/docs/features/05-kdnd.mdx
+++ b/packages/docs/docs/features/05-kdnd.mdx
@@ -19,6 +19,8 @@ This allows you to implement drag-based functionality while staying compliant wi
 the default drag capability with keyboard-controlled hotkeys and a visually hidden assistive text indicating the drag-process
 to screen readers.
 
+![Drag and Drop Reparenting Demo](../../static/img/ht-kdnd-navigation.gif)
+
 <DemoBox tags={["feature/dnd"]} initialStory="react-drag-and-drop-visible-assistive-text--visible-assistive-text" height="700px" />
 
 ## Setup
@@ -100,6 +102,8 @@ and complete the keyboard drag with `tree.stopKeyboardDrag()`.
 </button>
 ```
 
+![Drag and Drop Reparenting Demo](../../static/img/ht-kdnd-foreign-in.gif)
+
 ## Dragging foreign objects inside the tree with keyboard
 
 Similarly, moving data from outside the tree into it via a drag event
@@ -125,3 +129,5 @@ manually.
   Initiate keyboard drag on a foreign object
 </button>
 ```
+
+![Drag and Drop Reparenting Demo](../../static/img/ht-kdnd-foreign-out.gif)
