--- a/packages/docs/docs/features/05-kdnd.mdx
+++ b/packages/docs/docs/features/05-kdnd.mdx
@@ -19,7 +19,7 @@ This allows you to implement drag-based functionality while staying compliant wi
 the default drag capability with keyboard-controlled hotkeys and a visually hidden assistive text indicating the drag-process
 to screen readers.
 
-![Drag and Drop Reparenting Demo](../../static/img/ht-kdnd-navigation.gif)
+![Dragging items with Keyboard controls Demo](../../static/img/ht-kdnd-navigation.gif)
 
 <DemoBox tags={["feature/dnd"]} initialStory="react-drag-and-drop-visible-assistive-text--visible-assistive-text" height="700px" />
 
@@ -102,7 +102,7 @@ and complete the keyboard drag with `tree.stopKeyboardDrag()`.
 </button>
 ```
 
-![Drag and Drop Reparenting Demo](../../static/img/ht-kdnd-foreign-in.gif)
+![Keyboard Drag tree items out of tree demo](../../static/img/ht-kdnd-foreign-out.gif)
 
 ## Dragging foreign objects inside the tree with keyboard
 
@@ -130,4 +130,4 @@ manually.
 </button>
 ```
 
-![Drag and Drop Reparenting Demo](../../static/img/ht-kdnd-foreign-out.gif)
+![Keyboard Drag foreign object inside of tree demo](../../static/img/ht-kdnd-foreign-in.gif)
