--- a/packages/docs/docs/guides/2-accessibility.mdx
+++ b/packages/docs/docs/guides/2-accessibility.mdx
@@ -47,3 +47,9 @@ and can be customized to fit your needs.
 
 ![Drag and Drop Reparenting Demo](../../static/img/ht-homeend.gif)
 
+## Keyboard-controlled Drag and Drop
+
+To support moving items via drag-and-drop while staying compliant with accessibility standards, Headless Tree
+supports keyboard-controlled drag-and-drop via the [Keyboard Drag and Drop Feature](/features/kdnd).
+
+![Keyboard Drag and Drop Demo](../../static/img/ht-kdnd-navigation.gif)
