--- a/packages/docs/docs/dnd/1-overview.mdx
+++ b/packages/docs/docs/dnd/1-overview.mdx
@@ -73,7 +73,7 @@ const tree = useTree<Item>({
 ## The Drop Event
 
 When the user drops tree items onto a target within the tree, the [`onDrop`](/api/core/interface/DragAndDropFeatureConfig#onDrop) event is called
-with the list of items that were dragged, and a [drop target](/api/core#DropTarget). This drop target is an object that contains
+with the list of items that were dragged, and a [drop target](/api/core#DragTarget). This drop target is an object that contains
 either
 
 - the `item` that is dropped to, if the user dragged on the title of an item with the intent to make it a child of that item
