readme updates for beta release

--- a/packages/docs/docs/getstarted.mdx
+++ b/packages/docs/docs/getstarted.mdx
@@ -8,13 +8,6 @@ sidebar_position: 0
 
 import { DemoBox } from "../src/components/demo/demo-box";
 
-:::danger[A note on stability]
-
-This project is currently in Alpha. Expect breaking changes in minor version bumps and incomplete changelogs.
-Bug reports and contributions are welcome!
-
-:::
-
 ## Installation
 
 To start using Headless Tree, install it to your project as dependency via
@@ -32,6 +25,13 @@ yarn add @headless-tree/core @headless-tree/react
 During Alpha, releases are published on an irregular basis, and changelogs may not properly reflect all changes.
 The current main branch is always published to NPM under the `snapshot` tag, so you can use
 `npm install @headless-tree/core@snapshot @headless-tree/react@snapshot` to get the latest snapshot deployment.
+
+:::tip[Headless Tree is available!]
+
+Headless Tree is now available as Beta! If the library provides you with a benefit, leaving [a star
+on Github](https://github.com/lukasbach/headless-tree) would help a lot with the visibility of the project.
+
+:::
 
 ## Quick Start
 
