improve readme guide

--- a/packages/docs/docs/getstarted.mdx
+++ b/packages/docs/docs/getstarted.mdx
@@ -22,9 +22,9 @@ or
 yarn add @headless-tree/core @headless-tree/react
 ```
 
-During Alpha, releases are published on an irregular basis, and changelogs may not properly reflect all changes.
 The current main branch is always published to NPM under the `snapshot` tag, so you can use
-`npm install @headless-tree/core@snapshot @headless-tree/react@snapshot` to get the latest snapshot deployment.
+`npm install @headless-tree/core@snapshot @headless-tree/react@snapshot` to get the latest snapshot deployment
+if you want to experiment with the latest features.
 
 :::tip[Headless Tree is available!]
 
