improved issue reporting guide

--- a/packages/docs/docs/getstarted.mdx
+++ b/packages/docs/docs/getstarted.mdx
@@ -28,7 +28,7 @@ if you want to experiment with the latest features.
 
 :::tip[Headless Tree is available!]
 
-Headless Tree is now available as Beta! If the library provides you with a benefit, leaving [a star
+Headless Tree is now available as Beta! If the library provides value to you, leaving [a star
 on Github](https://github.com/lukasbach/headless-tree) would help a lot with the visibility of the project.
 
 :::
@@ -149,3 +149,13 @@ a more complex payload type, and how to use the `getItemName` and `isItemFolder`
 display name and folder status of an item.
 
 <DemoBox stories={["react-general-item-data-objects--item-data-objects"]} />
+
+:::tip
+
+If the library provides value to you, leaving [a star
+on Github](https://github.com/lukasbach/headless-tree) would help a lot with the visibility of the project.
+If you encounter any bugs or issues, or have feedback about Headless Tree, please don't hesitate to
+open [an issue on Github](https://github.com/lukasbach/headless-tree/issues/new/choose), or get involved
+in the [discussion on Discord](https://discord.gg/KuZ6EezzVw).
+
+:::
