move docs files according to llm.txt order (#94)

--- a/packages/docs/docs/0-root/getstarted.mdx
+++ b/packages/docs/docs/0-root/getstarted.mdx
@@ -6,7 +6,7 @@ template: page
 sidebar_position: 0
 ---
 
-import { DemoBox } from "../src/components/demo/demo-box";
+import { DemoBox } from "../../src/components/demo/demo-box";
 
 ## Installation
 
