--- a/packages/docs/docs/0-root/getstarted.mdx
+++ b/packages/docs/docs/0-root/getstarted.mdx
@@ -159,3 +159,10 @@ open [an issue on Github](https://github.com/lukasbach/headless-tree/issues/new/
 in the [discussion on Discord](https://discord.gg/KuZ6EezzVw).
 
 :::
+
+## llms.txt
+
+You can find the documentation as `llm.txt` file available to use with LLM agents:
+
+- [llms.txt](https://headless-tree.lukasbach.com/llms.txt)
+- [llms-full.txt](https://headless-tree.lukasbach.com/llms-full.txt)
