add docs on isOrderedDragTarget (#108)

--- a/packages/docs/docs/3-dnd/1-overview.mdx
+++ b/packages/docs/docs/3-dnd/1-overview.mdx
@@ -85,6 +85,8 @@ or, if the user dragged between items while the `canReorder` config option is se
 - the `insertionIndex`, describing the index within the `item` where the items should be placed (see details below)
 - `dragLineIndex` and `dragLineLevel` describing the position of the drag line that is rendered while dragging
 
+You can use [`isOrderedDragTarget(dragTarget)`](/api/core/function/isOrderedDragTarget) to check which type a drag target is.
+
 :::info Difference between `childIndex` and `insertionIndex`
 
 `childIndex` describes the visual location inside the item that is being dropped into, where the user is dragging
