finalize checkboxes docs

--- a/packages/docs/docs/2-features/10-checkboxes.mdx
+++ b/packages/docs/docs/2-features/10-checkboxes.mdx
@@ -14,7 +14,7 @@ import { FeaturePageHeader } from "../../src/components/docs-page/feature-page-h
     feature="checkboxes"
 />
 
-<DemoBox tags={["feature/checkbox"]} />
+<DemoBox tags={["feature/checkbox"]} initialStory="react-checkboxes-general--general" />
 
 :::warning
 
@@ -48,3 +48,7 @@ Data Loader feature.
 :::
 
 The default for `canCheckFolders` is `true` for asynchronous trees, and `false` for synchronous trees.
+
+Below, you can see a sample for a tree with checkboxes, where the `canCheckFolders` option is set to `true`:
+
+<DemoBox tags={["feature/checkbox"]} initialStory="react-checkboxes-can-check-folders--can-check-folders" />
